--- a/day35/portfolio.html
+++ b/day35/portfolio.html
@@ -23,7 +23,7 @@
         <label for="message">Message:</label><br>
         <textarea id="message" name="message" rows="4" cols="50" required></textarea><br><br>
         
-        <input type="submit" value="Submit">
+        <input type="submit" value="">
     </form>
 </body>
 </html>
